[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/themes/font_big.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/themes/font_medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/img/title.png" type="Texture" id=3]
[ext_resource path="res://src/menus/Select.gd" type="Script" id=4]
[ext_resource path="res://assets/img/portraits/hiroki-portrait.png" type="Texture" id=5]
[ext_resource path="res://src/themes/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/sfx/mario.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/connah.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 30 )

[node name="Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -446, 51 )
theme = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Background" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="MainUI" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Shadow" type="Label" parent="MainUI"]
margin_left = 266.0
margin_top = 90.0
margin_right = 779.0
margin_bottom = 166.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Character Select"
align = 1

[node name="Label" type="Label" parent="MainUI"]
margin_left = 264.0
margin_top = 88.0
margin_right = 777.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 1 )
text = "Character Select"
align = 1

[node name="ColorRect" type="ColorRect" parent="MainUI"]
margin_left = 442.0
margin_top = 167.0
margin_right = 570.0
margin_bottom = 295.0
color = Color( 0.494118, 0.494118, 0.494118, 1 )

[node name="Portrait" type="Sprite" parent="MainUI"]
position = Vector2( 506, 231 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Hiroki" type="Button" parent="MainUI"]
unique_name_in_owner = true
margin_left = 308.0
margin_top = 316.0
margin_right = 716.0
margin_bottom = 364.0
focus_neighbour_left = NodePath("../Conner")
focus_neighbour_top = NodePath("../Brook")
focus_neighbour_bottom = NodePath("../Edward")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Hiroki"

[node name="Edward" type="Button" parent="MainUI"]
margin_left = 308.0
margin_top = 374.0
margin_right = 716.0
margin_bottom = 422.0
focus_neighbour_top = NodePath("../Hiroki")
focus_neighbour_right = NodePath("../Mario")
focus_neighbour_bottom = NodePath("../Brook")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Edward"

[node name="Brook" type="Button" parent="MainUI"]
margin_left = 308.0
margin_top = 432.0
margin_right = 716.0
margin_bottom = 480.0
focus_neighbour_top = NodePath("../Edward")
focus_neighbour_bottom = NodePath("../Hiroki")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Brook"

[node name="Conner" type="Button" parent="MainUI"]
unique_name_in_owner = true
visible = false
margin_left = 82.0
margin_top = 315.0
margin_right = 280.0
margin_bottom = 363.0
focus_neighbour_right = NodePath("../Hiroki")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Conner"

[node name="Mario" type="Button" parent="MainUI"]
unique_name_in_owner = true
visible = false
margin_left = 744.0
margin_top = 374.0
margin_right = 977.0
margin_bottom = 422.0
focus_neighbour_left = NodePath("../Edward")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "Mario"

[node name="ConnerSound" type="AudioStreamPlayer2D" parent="MainUI"]
unique_name_in_owner = true
position = Vector2( 744, 374 )
stream = ExtResource( 8 )

[node name="MarioSound" type="AudioStreamPlayer2D" parent="MainUI"]
unique_name_in_owner = true
stream = ExtResource( 7 )

[node name="MarioActivate" type="TouchScreenButton" parent="MainUI"]
position = Vector2( 734, 372 )
shape = SubResource( 1 )

[node name="ConnerActivate" type="TouchScreenButton" parent="MainUI"]
position = Vector2( 81, 312 )
shape = SubResource( 1 )

[connection signal="focus_entered" from="MainUI/Hiroki" to="." method="_on_Hiroki_entered"]
[connection signal="mouse_entered" from="MainUI/Hiroki" to="." method="_on_Hiroki_entered"]
[connection signal="pressed" from="MainUI/Hiroki" to="." method="_on_Hiroki_pressed"]
[connection signal="focus_entered" from="MainUI/Edward" to="." method="_on_Edward_entered"]
[connection signal="mouse_entered" from="MainUI/Edward" to="." method="_on_Edward_entered"]
[connection signal="pressed" from="MainUI/Edward" to="." method="_on_Edward_pressed"]
[connection signal="focus_entered" from="MainUI/Brook" to="." method="_on_Brook_entered"]
[connection signal="mouse_entered" from="MainUI/Brook" to="." method="_on_Brook_entered"]
[connection signal="pressed" from="MainUI/Brook" to="." method="_on_Brook_pressed"]
[connection signal="focus_entered" from="MainUI/Conner" to="." method="_on_Conner_entered"]
[connection signal="mouse_entered" from="MainUI/Conner" to="." method="_on_Conner_entered"]
[connection signal="pressed" from="MainUI/Conner" to="." method="_on_Conner_pressed"]
[connection signal="focus_entered" from="MainUI/Mario" to="." method="_on_Mario_entered"]
[connection signal="mouse_entered" from="MainUI/Mario" to="." method="_on_Mario_entered"]
[connection signal="pressed" from="MainUI/Mario" to="." method="_on_Mario_pressed"]
[connection signal="pressed" from="MainUI/MarioActivate" to="." method="activate_mario"]
[connection signal="pressed" from="MainUI/ConnerActivate" to="." method="activate_conner"]
